--- a/style.css
+++ b/style.css
@@ -1,3 +1,25 @@
+.header {
+    display: flex;
+    justify-content: space-around;
+}
+
+ul {
+    color: #CD313E;
+    font-family: Roboto;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+}
+
+button {
+    width: 189.131px;
+    height: 36px;
+    flex-shrink: 0;
+    background-color: #CD313E;
+    color: #fff;
+}
+
 .content {
     padding-top: 240px;
     padding-bottom: 440px;
@@ -20,4 +42,14 @@
     font-style: normal;
     font-weight: 400;
     line-height: 30px; 
+}
+
+.footer {
+    background-color: #F78282;
+    padding-top: 68px;
+}
+
+.footer .container {
+    display: flex;
+    justify-content: space-between;
 }
