--- a/style.css
+++ b/style.css
@@ -1,3 +1,70 @@
+/* Reset */
+:root {
+  --text-color: #D44D51;
+  --body-background: #FFFFFF;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body, input, select, textarea, button {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 1rem; /*16 px (padrão do navegador)*/
+}
+
+body {
+  color: var(--text-color);
+  background: var(--body-background);
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+}
+
+/* Utils */
+.container {
+  max-width: 1130px;
+  margin-inline: auto;
+  padding-inline: 10px;
+}
+
+.button {
+  background: #CD313E;
+  border: none;
+
+  color: #fff;
+  font-weight: 500;
+
+  padding: 0.5rem 1.5rem;
+  border-radius: 4px;
+  border: 2px solid transparent;
+}
+
+.button--secondary {
+  background: transparent;
+  border: 2px solid #091133;
+  color: #091133;
+}
+
+.button--small {
+  font-size: 0.75rem;
+  padding: 0.25rem 0.75rem;
+}
+
 .header {
     display: flex;
     justify-content: space-around;
@@ -12,13 +79,13 @@ ul {
     line-height: 24px;
 }
 
-button {
+/* button {
     width: 189.131px;
     height: 36px;
     flex-shrink: 0;
     background-color: #CD313E;
     color: #fff;
-}
+} */
 
 .content {
     padding-top: 240px;
@@ -41,7 +108,7 @@ button {
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
-    line-height: 30px; 
+    line-height: 30px;
 }
 
 .footer {
