--- a/style.css
+++ b/style.css
@@ -49,19 +49,19 @@ button {
 .container-fluid {
   width: calc(100vw - ((100vw - 1284px) / 2));
   margin-left: auto;
+  background: purple;
   padding-inline: 10px;
 }
 
 .button {
   background: #CD313E;
-  border: none;
+  border: 2px solid transparent;
 
   color: #fff;
   font-weight: 500;
 
   padding: 0.5rem 1.5rem;
   border-radius: 4px;
-  border: 2px solid transparent;
 }
 
 .button--secondary {
